website/versioned_docs/version-0.6.0/cli-reference/gitops_delete_app.md
## gitops delete app

Delete an app from a gitops cluster

### Synopsis

Deletes an application from a gitops cluster so it will no longer be managed via GitOps

```
gitops delete app <app name> [flags]
```

### Examples

```

  # Delete application from gitops control via immediate commit
  gitops delete app podinfo

```

### Options

```
      --auto-merge   If set, 'gitops delete app' will merge changes automatically to the config repository
      --dry-run      If set, 'gitops delete app' will not make any changes to the system; it will just display the actions that would have been taken
  -h, --help         help for app
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops delete](gitops_delete.md)	 - Delete one or many Weave GitOps resources

###### Auto generated by spf13/cobra on 16-Dec-2021
